video-player-cards/src/cards-module/cards-container/cards-container.scss
@mixin in-full-screen() {
  div[data-hook='player-container'][data-in-full-screen='true'] & {
    @content
  }
}

@mixin max-width-550() {
  div[data-hook='player-container'][#{max-width}~=#{'"550px"'}] & {
    @content
  }
}

$controls-size-less-550px: 48;
$controls-size-more-550px: 60;
$controls-size-full-screen: 88;

$container-margin-less-550px: 12;
$container-margin-more-550px: 18;
$container-margin-full-screen: 30;

.hidden {
  visibility: hidden;
  opacity: 0;
}

.container {
  position: absolute;
  left: 0;
  height: 100%;
  width: 100%;

  bottom: 12px;

  overflow: visible;

  max-width: calc(100% - #{2 * $container-margin-more-550px}px);
  max-height: calc(100% - #{$controls-size-more-550px}px);
  margin: 0 #{$container-margin-more-550px}px;

  transition: bottom .2s;

  @include max-width-550() {
    max-width: calc(100% - #{2 * $container-margin-less-550px}px);
    max-height: calc(100% - #{$controls-size-less-550px}px);
    margin: 0 #{$container-margin-less-550px}px;
  }
  @include in-full-screen() {
    max-width: calc(100% - 2 * #{$container-margin-full-screen});
    max-height: calc(100% - 85px);
    margin: 0 #{$container-margin-full-screen}px;
  }

  &[data-anchor-point='anchor-top-left'] {
    left: 0;
  }

  &[data-anchor-point='anchor-top-right'] {
    right: 0;
  }

  &[data-anchor-point='anchor-top-left'],
  &[data-anchor-point='anchor-top-right'] {
    top: 12px;

    @include max-width-550() {
      top: 18px;
    }
    @include in-full-screen() {
      top: 24px;
    }
  }

  &[data-anchor-point='anchor-bottom-left'] {
    left: 0;
  }

  &[data-anchor-point='anchor-bottom-right'] {
    right: 0;
  }

  &[data-anchor-point='anchor-bottom-left'],
  &[data-anchor-point='anchor-bottom-right'] {
    bottom: #{$container-margin-more-550px}px;

    @include max-width-550() {
      bottom: #{$container-margin-less-550px}px;
    }
    @include in-full-screen() {
      bottom: #{$container-margin-full-screen}px;
    }

    &.controls-showed {
      bottom: #{$controls-size-more-550px - $container-margin-less-550px}px;

      @include max-width-550() {
        bottom: #{$controls-size-less-550px - $container-margin-less-550px}px;
      }
      @include in-full-screen() {
        bottom: #{$controls-size-full-screen - $container-margin-less-550px}px;
      }
    }
  }
}

